# axum-api-aws

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  mainqqqq.rs
src/domains/auth/: cognito.rs  dynamo.rs  mod.rs  user_manager.rs
src/handlers/: users.rs
src/models/: user.rs
src/routes/: users.rs
src/services/: cognito.rs
