[package]
name = "axum-api-aws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.78"
aws-sdk-cognitoidentityprovider = "1.84"
dotenv = "0.15.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
aws-types = "1.3.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }